// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Atoms - Layout> - Rendering Renders a View dark and ViewHeader fixed element 1`] = `
.c1 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background: #F9FAFB;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',system-ui;
  color: #0F213F;
}

.c2 {
  background: #FFFFFF;
  box-shadow: 0 0 1px 0 rgba(0,19,51,0.1),0 2px 3px 0 rgba(0,19,51,0.12);
  z-index: 2;
  position: fixed;
  width: 100%;
  height: auto;
}

<div
  className="c0 c1 sc-bwzfXH c1 sc-bdVaJa bDWFJH sc-bdVaJa bDWFJH"
>
  <div
    className="c2 sc-bdVaJa bDWFJH"
  >
    View Header
  </div>
</div>
`;

exports[`<Atoms - Layout> - Rendering Renders a View element 1`] = `
.c1 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background: transparent;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',system-ui;
  color: #0F213F;
}

<div
  className="c0 c1 sc-bwzfXH c1 sc-bdVaJa bDWFJH sc-bdVaJa bDWFJH"
>
  Synaptic FlexBox render test
</div>
`;

exports[`<Atoms - Layout> - Rendering Renders a View, ViewHeader and ViewContent element 1`] = `
.c1 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background: transparent;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',system-ui;
  color: #0F213F;
}

.c2 {
  background: #FFFFFF;
  box-shadow: 0 0 1px 0 rgba(0,19,51,0.1),0 2px 3px 0 rgba(0,19,51,0.12);
  z-index: 2;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
}

<div
  className="c0 c1 sc-bwzfXH c1 sc-bdVaJa bDWFJH sc-bdVaJa bDWFJH"
>
  <div
    className="c2 sc-bdVaJa bDWFJH"
  >
    View Header
  </div>
  <div
    className="c3 sc-bdVaJa bDWFJH"
  >
    View content
  </div>
</div>
`;
